--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : 寂寞先生
 tagline: Site Tagline
 author :
-  name : Name Lastname
+  name : enml
   email : blah@email.test
   github : username
   twitter : username
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://enml.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -64,7 +64,7 @@ JB :
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
   #   /assets
   #
-  ASSET_PATH : false
+  ASSET_PATH : enml.github.io/blog/assets/themes/twitter/
 
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
