a new post name'github pages'

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ pygments: true
 title : 寂寞先生
 tagline: Site Tagline
 author :
-  name : enml
+  name : 陈佳伟
   email : blah@email.test
   github : username
   twitter : username
