--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ permalink: /:categories/:year/:month/:day/:title
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 pygments: true
-
+excerpt_separator: "\n\n\n"
+safe: false
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
