--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://enml.github.io
+production_url : http://enml.github.io/blog
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
