del <hr> and change the style of <hr>

--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-50637568-1'
     getclicky :
       site_id : 
     mixpanel :
