--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ permalink: /:year/:month/:day/:title
 markdown: rdiscount
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 pygments: true
+#mardown: redcarpet
 
 safe: false
 # Themes are encouraged to use these universal variables 
