--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 permalink: /:year/:month/:day/:title 
 markdown: rdiscount
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-pygments: true
+highlighter: pygments
 #mardown: redcarpet
 
 safe: false
